backend/compile_out.txt

> Task :compileJava FAILED
C:\dev\workspace\test02\backend\src\main\java\com\groupware\service\ApprovalService.java:128: error: cannot find symbol
                .orElseThrow(() -> new CustomException(ErrorCode.FORBIDDEN, "현재 결재 순서가 아니거나 권한이 없습니다."));
                                                                ^
  symbol:   variable FORBIDDEN
  location: class ErrorCode
C:\dev\workspace\test02\backend\src\main\java\com\groupware\service\ApprovalService.java:159: error: cannot find symbol
                .orElseThrow(() -> new CustomException(ErrorCode.FORBIDDEN, "현재 결재 순서가 아니거나 권한이 없습니다."));
                                                                ^
  symbol:   variable FORBIDDEN
  location: class ErrorCode
C:\dev\workspace\test02\backend\src\main\java\com\groupware\service\ApprovalService.java:173: error: cannot find symbol
            throw new CustomException(ErrorCode.FORBIDDEN, "자신이 상신한 문서만 취소할 수 있습니다.");
                                               ^
  symbol:   variable FORBIDDEN
  location: class ErrorCode
C:\dev\workspace\test02\backend\src\main\java\com\groupware\service\ApprovalService.java:189: error: cannot find symbol
            throw new CustomException(ErrorCode.FORBIDDEN, "자신이 기안한 문서만 재기안할 수 있습니다.");
                                               ^
  symbol:   variable FORBIDDEN
  location: class ErrorCode
4 errors

[Incubating] Problems report is available at: file:///C:/dev/workspace/test02/backend/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\dev\workspace\test02\backend\src\main\java\com\groupware\service\ApprovalService.java:128: error: cannot find symbol
                  .orElseThrow(() -> new CustomException(ErrorCode.FORBIDDEN, "현재 결재 순서가 아니거나 권한이 없습니다."));
                                                                  ^
    symbol:   variable FORBIDDEN
    location: class ErrorCode
  C:\dev\workspace\test02\backend\src\main\java\com\groupware\service\ApprovalService.java:159: error: cannot find symbol
                  .orElseThrow(() -> new CustomException(ErrorCode.FORBIDDEN, "현재 결재 순서가 아니거나 권한이 없습니다."));
                                                                  ^
    symbol:   variable FORBIDDEN
    location: class ErrorCode
  C:\dev\workspace\test02\backend\src\main\java\com\groupware\service\ApprovalService.java:173: error: cannot find symbol
              throw new CustomException(ErrorCode.FORBIDDEN, "자신이 상신한 문서만 취소할 수 있습니다.");
                                                 ^
    symbol:   variable FORBIDDEN
    location: class ErrorCode
  C:\dev\workspace\test02\backend\src\main\java\com\groupware\service\ApprovalService.java:189: error: cannot find symbol
              throw new CustomException(ErrorCode.FORBIDDEN, "자신이 기안한 문서만 재기안할 수 있습니다.");
                                                 ^
    symbol:   variable FORBIDDEN
    location: class ErrorCode
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 2s
1 actionable task: 1 executed
